Some changes added