@@ -2,13 +2,11 @@ package fintech.evolution.service.sender;
 
 import fintech.evolution.service.user.AbstractService;
 import fintech.evolution.variable.entity.UserCooperation;
-import fintech.evolution.variable.entity.user.UserDebate;
 import fintech.evolution.variable.message.GeneralSender;
 import fintech.evolution.variable.message.SenderMessage;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.telegram.telegrambots.meta.api.methods.ParseMode;
 import org.telegram.telegrambots.meta.api.objects.Message;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.KeyboardButton;
@@ -19,7 +17,6 @@ import java.util.Collections;
 import java.util.List;
 
 import static fintech.evolution.utils.Utils.getTextByLang;
-import static fintech.evolution.variable.constants.user.UserLang.*;
 import static fintech.evolution.variable.constants.user.UserMenu.*;
 import static fintech.evolution.variable.constants.user.UserStep.*;
 import static fintech.evolution.variable.constants.user.UserText.*;
@@ -27,6 +24,7 @@ import static fintech.evolution.variable.constants.user.UserText.*;
 @Service
 @Slf4j
 public class MessageService extends AbstractService {
+
     @Value("${admin.chatId:0}")
     private Long adminChatId;
 
@@ -38,32 +36,36 @@ public class MessageService extends AbstractService {
                 case STEP_START -> {
                     return stepStart(chatId, getTextByLang(lang, TEXT_START_UZ, TEXT_START_RU));
                 }
-                case STEP_COOPERATION_SEND_PHOTO_OR_VIDEO -> {
-                    return stepCooperation(chatId);
+                case STEP_COOPERATION_FULL_NAME -> {
+                    return stepCooperation(chatId, message.getText());
+                }
+                case STEP_COOPERATION_PHONE -> {
+
                 }
             }
         } else {
             switch (message.getText()) {
                 case MENU_COOPERATION_UZ, MENU_COOPERATION_RU -> {
                     if (step.equals(STEP_START)) {
-                        service.setStep(chatId, STEP_COOPERATION_SEND_PHOTO_OR_VIDEO);
+                        service.setStep(chatId, STEP_COOPERATION_PHONE);
                         return getCooperation(chatId);
                     }
                 }
                 case MENU_STATISTICS_UZ, MENU_STATISTICS_RU -> {
                     if (step.equals(STEP_START)) {
-                        service.setStep(chatId, STEP_COOPERATION_SEND_PHOTO_OR_VIDEO);
+                        service.setStep(chatId, STEP_COOPERATION_PHONE);
                         return getCooperation(chatId);
                     }
                 }
             }
         }
+
         return Collections.emptyList();
     }
 
     public List<GeneralSender> getCooperation(Long chatId) {
-        String text = getTextByLang(service.getLang(chatId), TEXT_COOPERATION_SEND_PHOTO_OR_VIDEO_UZ, TEXT_COOPERATION_SEND_PHOTO_OR_VIDEO_RU);
-
+        String text = getTextByLang(service.getLang(chatId), TEXT_FULL_NAME_UZ, TEXT_FULL_NAME_RU);
+        service.setStep(chatId, STEP_COOPERATION_PHONE);
         SenderMessage senderMessage = SenderMessage
                 .builder()
                 .reply(getKeyboardWithCancel(chatId, null))
@@ -74,9 +76,23 @@ public class MessageService extends AbstractService {
 
     }
 
-    public List<GeneralSender> stepCooperation(Long chatId) {
-        UserCooperation userCooperation = service.getUserReview(chatId);
-        return Collections.emptyList();
+    public List<GeneralSender> stepCooperation(Long chatId, String msg) {
+        if (msg.length() <= 2) return getCooperation(chatId);
+
+        String lang = service.getLang(chatId);
+        UserCooperation userCooperation = service.getUserCooperation(chatId);
+        userCooperation.setFullName(msg);
+        service.setUserCooperation(chatId, userCooperation);
+        service.setStep(chatId, STEP_COOPERATION_PHONE);
+
+        String text = getTextByLang(lang, TEXT_PHONE_UZ, TEXT_PHONE_RU);
+
+
+        return List.of(SenderMessage
+                .builder()
+                .chatId(chatId)
+                .text(text)
+                .build());
     }
 
     public List<GeneralSender> stepStart(Long chatId, String text) {
@@ -95,36 +111,6 @@ public class MessageService extends AbstractService {
 
         SenderMessage senderMessage = SenderMessage.builder().text(text).chatId(chatId).reply(keyboard).build();
         return Collections.singletonList(senderMessage);
-    }
-
-    private List<GeneralSender> getRegistration(Long chatId) {
-        boolean b = service.getLang(chatId).equals(LANG_UZ);
-        String ms = b ? "<b>Исмингизни киритинг!</b>" : "<b>Введите ваше имя!</b>";
-
-        return List.of(SenderMessage
-                .builder()
-                .reply(getKeyboardWithCancel(chatId, null))
-                .chatId(chatId)
-                .parseMode(ParseMode.HTML)
-                .text(ms).build());
-    }
-
-    private List<GeneralSender> setNameFunction(Long chatId, String text) {
-        UserDebate userDebate = service.getUserDebate(chatId);
-        userDebate.setName(text);
-        service.setUserDebate(chatId, userDebate);
-        service.setStep(chatId, STEP_SET_SURNAME);
-
-        boolean b = service.getLang(chatId).equals(LANG_UZ);
-        String ms = b ? "<b>Фамилиянгизни киритинг!</b>" : "<b>Введите свою фамилию!</b>";
-
-
-        return List.of(SenderMessage
-                .builder()
-                .reply(getKeyboardWithCancel(chatId, null))
-                .chatId(chatId)
-                .parseMode(ParseMode.HTML)
-                .text(ms).build());
     }
 
 
